--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,3 +1,11 @@
+.container {
+    position: relative;
+    border: 1px solid black;
+    height: 800px;
+    width: 800px;
+    overflow: hidden;
+  }
+
 .circle {
     position: absolute;
     top: 0;
